fix: version test

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "angualr",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "semantic-release": "semantic-release"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,11 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "semantic-release": "^17.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/watertea/angualr.git"
   }
 }
